; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dst/extr_thread_pool.c_thread_pool_schedule.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dst/extr_thread_pool.c_thread_pool_schedule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread_pool = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @thread_pool_schedule(%struct.thread_pool* %0, i32 (i8*, i8*)* %1, i32 (i8*, i8*)* %2, i8* %3, i64 %4) #0 {
  %6 = alloca %struct.thread_pool*, align 8
  %7 = alloca i32 (i8*, i8*)*, align 8
  %8 = alloca i32 (i8*, i8*)*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store %struct.thread_pool* %0, %struct.thread_pool** %6, align 8
  store i32 (i8*, i8*)* %1, i32 (i8*, i8*)** %7, align 8
  store i32 (i8*, i8*)* %2, i32 (i8*, i8*)** %8, align 8
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load %struct.thread_pool*, %struct.thread_pool** %6, align 8
  %12 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %7, align 8
  %13 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %8, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = load i64, i64* %10, align 8
  %16 = call i32 @thread_pool_schedule_private(%struct.thread_pool* %11, i32 (i8*, i8*)* %12, i32 (i8*, i8*)* %13, i8* %14, i64 %15, i32* null)
  ret i32 %16
}

declare dso_local i32 @thread_pool_schedule_private(%struct.thread_pool*, i32 (i8*, i8*)*, i32 (i8*, i8*)*, i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
